# leadpilot-frontend

./: .gitignore  package-lock.json  package.json  pyproject.toml  vite.config.ts
client/: .gitignore
client/public/csv-template/: leads-template.csv
client/src/: App.tsx  index.css  main.tsx
client/src/components/admin/: adminsidebar.tsx  notification-dropdown.tsx  quick-actions.tsx  recent-activity.tsx  stats-cards.tsx  user-list.tsx  user-summary-cards.tsx
client/src/components/dashboard/: ai-message-generator.tsx  notification-dropdown.tsx  recent-campaigns.tsx  sidebar.tsx  upload-modal.tsx
client/src/components/tickets/: TicketDetails.tsx  TicketForm.tsx  TicketList.tsx
client/src/components/ui/: dialog.tsx
client/src/hooks/: use-auth.tsx  use-notifications.ts  use-tickets.ts
client/src/lib/: queryClient.ts  ticketsApi.ts
client/src/pages/: activity.tsx  admindashboard.tsx  auth-page.tsx  dashboard.tsx  emailCampaigns.tsx  leads.tsx  pricing.tsx  settings.tsx
